--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ ShrinkWrap C++ SDK (ZIP)<br/></td>
      <div id="compatibility">
      	<h3>Compatibility</h3>
      	<p>
-     	ShrinkWrap overall should be <em>mostly</em> compatible with the following C++ compilers and  as been tested with and is known to work with the following:
+     	ShrinkWrap overall should be <em>mostly</em> compatible with most C++ compilers and  as been tested with and is known to work with the following:
      	</p>
      	<ul>
      		<li><a class="extern" href="http://gcc.gnu.org">GNU G++</a></li> 
