New colour scheme.

--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 	<div id="features">
 	 <a name="dl"></a>
 	 <!-- Thanks to Mihai Ungureanu for assistance in design of buttons below -->  
-	 <table id="dl_subsection">
+	 <!--<table id="dl_subsection">
 	 <tr><td><a href="#">
 	 	<img id="download_button" alt="Download ShrinkWrap executable." src="images/download_src_button.png"/></a></td>
 	 <td><a href="#">
-		<img id="download_src_button" alt="Download ShrinkWrap source code." src="images/download_src_button.png"/></a></td></tr>
+		<<img id="download_src_button" alt="Download ShrinkWrap source code." src="images/download_src_button.png"/></a></td></tr>
 	<tr><td class="caption">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 ShrinkWrap C++ SDK (ZIP)<br/></td>
-	<td class="caption">Latest Git commit. (ZIP)</td></tr></table>
+	<td class="caption">Latest Git commit. (ZIP)</td></tr></table>-->
      	<!--<h3>Features</h3>
      	<strong>ShrinkWrap offers...</strong>
      	<ul>
