Added license section.

--- a/index.html
+++ b/index.html
@@ -82,12 +82,19 @@ ShrinkWrap C++ SDK (ZIP)<br/></td>
      <div id="compatibility">
      	<h3>Compatibility</h3>
      	<p>
-     	ShrinkWrap overall should be <em>mostly</em> compatible with most C++ compilers and  as been tested with and is known to work with the following:
+     	ShrinkWrap overall should be <em>mostly</em> compatible with most C++ compilers and has been tested with and is known to work with the following:
      	</p>
      	<ul>
      		<li><a class="extern" href="http://gcc.gnu.org">GNU G++</a></li> 
 		 </ul>
      </div> 
+     <div id="license">
+      ShrinkWrap SDK is <a class="extern"
+      href="https://github.com/stpettersens/ShrinkWrap/tree/master/src">open source</a> software
+      <a class="extern" 
+      href="https://github.com/stpettersens/ShrinkWrap/raw/master/LICENSE">licensed</a>
+      under the <a target="extern" href="http://www.opensource.org/licenses/MIT">MIT license</a>.
+     </div>
      <div id="footer">
      <noscript>
      	<p><strong>JavaScript is either unsupported or has been disabled in the browser.<br/>
