Edited index.html via GitHub

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 	 <tr><td><a href="#">
 	 	<img id="download_button" alt="Download ShrinkWrap executable." src="images/download_src_button.png"/></a></td>
 	 <td><a href="#">
-		<<img id="download_src_button" alt="Download ShrinkWrap source code." src="images/download_src_button.png"/></a></td></tr>
+		<img id="download_src_button" alt="Download ShrinkWrap source code." src="images/download_src_button.png"/></a></td></tr>
 	<tr><td class="caption">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
 ShrinkWrap C++ SDK (ZIP)<br/></td>
 	<td class="caption">Latest Git commit. (ZIP)</td></tr></table>-->
@@ -89,6 +89,7 @@ ShrinkWrap C++ SDK (ZIP)<br/></td>
 		 </ul>
      </div> 
      <div id="license">
+      <h3>License</h3>
       ShrinkWrap SDK is <a class="extern"
       href="https://github.com/stpettersens/ShrinkWrap/tree/master/src">open source</a> software
       <a class="extern" 
